<?xml version="1.0" encoding="utf-8"?>

<!-- Meet Patel n01460090 Section 0NB-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApartmentActivity"
    android:background="#E4F0F6">

    <TextView
        android:id="@+id/MeetTextViewApartment"
        android:layout_width="415dp"
        android:layout_height="69dp"
        android:text="@string/apartmentsHead"
        android:textSize="40sp"
        android:gravity="center"
        android:fontFamily="@font/exo_2_bold_italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/MeetScrollView1"
        android:layout_width="410dp"
        android:layout_height="542dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MeetApartmentCheckBox1"
                android:text="@string/apartment_1"
                android:textSize="30sp"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_gravity="center"
                android:contentDescription="@string/apartmentimage1"
                app:srcCompat="@drawable/apartment1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/address_123_blake_street_toronto_nrent_per_month_1200"
                android:textSize="20sp"
                android:textStyle="bold" />


            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MeetApartmentCheckBox2"
                android:text="@string/apartment_2"
                android:textSize="30sp"
                android:textStyle="italic" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="136dp"
                android:layout_gravity="center"
                android:contentDescription="@string/apartmentimage2"
                app:srcCompat="@drawable/apartment2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/address_235_kirk_street_toronto_n_rent_per_month_1500"
                android:textSize="20sp"
                android:textStyle="bold" />


            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MeetApartmentCheckBox3"
                android:text="@string/apartment_3"
                android:textSize="30sp"
                android:textStyle="italic" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="136dp"
                android:layout_gravity="center"
                android:contentDescription="@string/apartmentimage3"
                app:srcCompat="@drawable/apartment3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/address_25_kim_street_toronto_n_rent_per_month_1350"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


    <Button
        android:layout_width="282dp"
        android:layout_height="64dp"
        android:id="@+id/MeetApartmentBtn"
        android:text="@string/NextBtn"
        android:textSize="30sp"
        android:textStyle="italic"
        android:backgroundTint="#13324b"
        android:textColor="#F8F9FA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>