<?xml version="1.0" encoding="utf-8"?>

<!-- Meet Patel n01460090 Section 0NB-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SemiDetachedActivity"
    android:background="#E4F0F6">

    <TextView
        android:id="@+id/MeetTextSemiDetached"
        android:layout_width="415dp"
        android:layout_height="69dp"
        android:fontFamily="@font/exo_2_bold_italic"
        android:gravity="center"
        android:text="@string/detachedHead"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/MeetScrollView3"
        android:layout_width="410dp"
        android:layout_height="542dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MeetSemiDetachedCheckBox1"
                android:text="@string/semidetached_1"
                android:textSize="30sp"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_gravity="center"
                android:contentDescription="@string/semidetachedimage1"
                app:srcCompat="@drawable/semidetached1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/address_21_dark_street_toronto_nrent_per_month_2000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MeetSemiDetachedCheckBox2"
                android:text="@string/semidetached_2"
                android:textSize="30sp"
                android:textStyle="italic" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="136dp"
                android:layout_gravity="center"
                android:contentDescription="@string/semidetachedimage2"
                app:srcCompat="@drawable/semidetached2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/address_78_white_street_toronto_nrent_per_month_2500"
                android:textSize="20sp"
                android:textStyle="bold" />


            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MeetSemiDetachedCheckBox3"
                android:text="@string/semidetached_3"
                android:textSize="30sp"
                android:textStyle="italic" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="136dp"
                android:layout_gravity="center"
                android:contentDescription="@string/semidetachedimage3"
                app:srcCompat="@drawable/semidetached3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/address_36_madison_street_toronto_nrent_per_month_2300"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


    <Button
        android:layout_width="282dp"
        android:layout_height="64dp"
        android:id="@+id/MeetSemiDetachedBtn"
        android:text="@string/NextBtn"
        android:textSize="30sp"
        android:textStyle="italic"
        android:backgroundTint="#13324b"
        android:textColor="#F8F9FA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>