<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentActivity"
    android:background="#F8BBBB">

    <RadioGroup
        android:id="@+id/MeetRadioGroup"
        android:layout_width="358dp"
        android:layout_height="421dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258">

        <RadioButton
            android:id="@+id/MeetRadioButton1"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:text="@string/radiobtn1"
            android:textSize="30sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/MeetRadioButton2"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:text="@string/radiobtn2"
            android:textSize="30sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/MeetRadioButton3"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:text="@string/radiobtn3"
            android:textSize="30sp"
            android:textStyle="italic" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/MeetImageButton"
        android:layout_width="295dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@drawable/rentimg"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/MeetRentTextView"
        android:layout_width="408dp"
        android:layout_height="81dp"
        android:fontFamily="@font/exo_2_bold_italic"
        android:gravity="center"
        android:text="@string/RentTextView"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>